manifest/2.hyperauth_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperauth
  namespace: hyperauth
  labels:
    app: hyperauth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hyperauth
  template:
    metadata:
      labels:
        app: hyperauth
    spec:
      serviceAccount: hyperauth-admin
      volumes:
      - name: ssl
        secret:
          secretName: hyperauth-https-secret
      - name: kafka
        secret:
          secretName: hyperauth-kafka-jks
      - name: log
        persistentVolumeClaim:
          claimName: hyperauth-log-pvc
      - name: picture
        persistentVolumeClaim:
          claimName: hyperauth-profile-picture    
      containers:
      - name: hyperauth
        image: tmaxcloudck/hyperauth:HYPERAUTH_VERSION  #b1.1.1.10
        args: ["-c standalone-ha.xml", "-Dkeycloak.profile.feature.docker=enabled -b 0.0.0.0"]                
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: ssl
          mountPath: /etc/x509/https
        - name: kafka
          mountPath: /etc/x509/kafka  
        - name: log
          mountPath: /opt/jboss/keycloak/standalone/log/hyperauth
        - name: picture
          mountPath: /opt/jboss/keycloak/welcome-content/profile-picture  
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "1"
            memory: "1Gi"
