manifest/5.kafka_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: hyperauth
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: wurstmeister/zookeeper:{ZOOKEEPER_VERSION}  #3.4.6
        ports:
          - containerPort: 2181
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "1"
            memory: "1Gi"  

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-1
  namespace: hyperauth
  labels:
    app: kafka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-1
  template:
    metadata:
      labels:
        app: kafka-1
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka:{KAFKA_VERSION}  #2.12-2.0.1
        ports:
        - name: client
          containerPort: 9092
        volumeMounts:
        - name: kafka-data
          mountPath: /kafka
        - name: ssl
          mountPath: /certs
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "1"
            memory: "1Gi"  
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-pvc-1
      - name: ssl
        secret:
          secretName: kafka-jks

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-2
  namespace: hyperauth
  labels:
    app: kafka-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-2
  template:
    metadata:
      labels:
        app: kafka-2
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka:{KAFKA_VERSION}  #2.12-2.0.1
        ports:
        - name: client
          containerPort: 9092
        volumeMounts:
        - name: kafka-data
          mountPath: /kafka
        - name: ssl
          mountPath: /certs
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "1"
            memory: "1Gi"  
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-pvc-2
      - name: ssl
        secret:
          secretName: kafka-jks
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-3
  namespace: hyperauth
  labels:
    app: kafka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-3
  template:
    metadata:
      labels:
        app: kafka-3
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka:{KAFKA_VERSION}  #2.12-2.0.1
        ports:
        - name: client
          containerPort: 9092
        volumeMounts:
        - name: kafka-data
          mountPath: /kafka
        - name: ssl
          mountPath: /certs
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "1"
            memory: "1Gi"  
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-pvc-3
      - name: ssl
        secret:
          secretName: kafka-jks
