manifest/4.kafka_init.yaml

apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: hyperauth
  labels:
    app: zookeeper
spec:
  ports:
  - name: zookeeper
    port: 2181
    targetPort: 2181
  - name: follower
    port: 2888
    targetPort: 2888
  - name: leader
    port: 3888
    targetPort: 3888
  selector:
    app: zookeeper
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: hyperauth
  labels:
    app: kafka-1
spec:
  type: LoadBalancer
  ports:
    - name: int
      port: 9092
      targetPort: 9092
    - name: ext
      port: 9093
      targetPort: 9093
  selector:
    app: kafka-1


---

apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: hyperauth
  labels:
    app: kafka-2
spec:
  type: LoadBalancer
  ports:
    - name: int
      port: 9092
      targetPort: 9092
    - name: ext
      port: 9093
      targetPort: 9093
  selector:
    app: kafka-2

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-3
  namespace: hyperauth
  labels:
    app: kafka-3
spec:
  type: LoadBalancer
  ports:
    - name: int
      port: 9092
      targetPort: 9092
    - name: ext
      port: 9093
      targetPort: 9093
  selector:
    app: kafka-3
