manifest/kafka_all.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: hyperauth
  labels:
    app: zookeeper
spec:
  ports:
    - name: zookeeper
      port: 2181
      targetPort: 2181
  selector:
    app: zookeeper

---

apiVersion: v1
kind: Service
metadata:
  name: kafkas
  namespace: hyperauth
  labels:
    app: kafka
spec:
  ports:
    - name: inside
      port: 9092
      targetPort: 9092
      nodePort: 32575
    - name: outside
      port: 29092
      targetPort: 29092
      nodePort: 32576
  selector:
    app: kafka
  type: NodePort   # ClusterIP or LoadBalancer or NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: hyperauth
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: wurstmeister/zookeeper:3.4.6
          ports:
            - containerPort: 2181

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: hyperauth
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      imagePullSecrets:
        - name : docker-pull-secret
      containers:
        - name: kafka
          image: wurstmeister/kafka:2.12-2.0.1
          ports:
            - name: inside
              containerPort: 9092
            - name: outside
              containerPort: 29092
