manifest/hyperauth_nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hyperauth
  namespace: hyperauth
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  tls:
    - hosts:
      - hyperauth.172.22.6.22.nip.io
      secretName: hyperauth-https-secret
  rules:
  - host: hyperauth.172.22.6.22.nip.io
    http:
      paths:
      - backend:
          serviceName: hyperauth
          servicePort: 8080
